# QualityHub

./: README.md
.devcontainer/: Dockerfile  devcontainer.json  (+3 more)
src/app/api/: Justfile  README.md  alembic.ini  pyproject.toml
src/app/api/alembic/: env.py
src/app/api/alembic/versions/: 0001_quality_hub_base.py
src/app/api/src/app/: config.py  main.py
src/app/api/src/app/config/: settings.py
src/app/api/src/app/core/core_tasks/: celery_app.py  redis_client.py  tasks.py
src/app/api/src/app/core/db/: __init__.py  session.py
src/app/api/src/app/core/security/: session_auth.py  token_cipher.py
src/app/api/src/app/core/tasks/: __init__.py  beat_schedule.py  celery_app.py
src/app/api/src/app/services/quality_hub/: __init__.py  api_router.py
src/app/api/src/app/services/quality_hub/api/: __init__.py  _utils.py
src/app/api/src/app/services/quality_hub/application/: __init__.py  deployment_status.py  gitlab_integration.py  pipeline_readiness.py  project_sync.py  rules.py  teams.py  workspace.py
src/app/api/src/app/services/quality_hub/contracts/: schemas.py
src/app/api/src/app/services/quality_hub/domain/: __init__.py  exceptions.py  validators.py
src/app/api/src/app/services/quality_hub/infrastructure/: __init__.py  rule_evaluator.py  rule_repository.py
src/app/api/src/app/services/quality_hub/schemas/: __init__.py
src/app/api/src/app/services/quality_hub/services/: __init__.py
src/app/api/src/app/services/quality_hub/validation/: validators.py
src/app/api/tests/unit/: test_pipeline_readiness.py  test_redis_and_celery.py  test_token_cipher.py
(+236 files in other folders)
